src/test/fail/basic_syntax/invalid_eq.lly
#[
SyntaxError: Invalid operation: list[integer] == list[string].
Where: File "invalid_eq.lly" at line 6
]#

[1] == ["1"]
